<resources>
  <string name="app_name" translatable="false">Nira Browser</string>
  <string
        name="url_project"
        translatable="false"
    >https://github.com/prirai/nira-browser</string>
    <string
        name="key_javascript_enabled"
        translatable="false"
    >javascript_enabled</string>
  <string name="key_app_theme_type" translatable="false">app_theme_type</string>
  <string name="key_web_theme_type" translatable="false">web_theme_type</string>
  <string name="key_search_engine" translatable="false">search_engine</string>
  <string name="key_private_search_engine" translatable="false">private_search_engine</string>
  <string name="key_desktop_mode_default" translatable="false">desktop_mode_default</string>
  <string name="key_translations_enabled" translatable="false">translations_enabled</string>
  <string name="key_background_playback_youtube" translatable="false">background_playback_youtube</string>
  <string name="background_playback_youtube">Background audio on YouTube</string>
  <string name="background_playback_youtube_summary">Keep YouTube playing when the tab or app is in the background (installs a content script on youtube.com). Requires app restart.</string>
    <string
        name="key_bar_addon_list"
        translatable="false"
    >bar_addons_list</string>
  <string name="key_clear_tabs" translatable="false">clear_tabs</string>
  <string name="key_clear_history" translatable="false">clear_history</string>
  <string name="key_clear_cookies" translatable="false">clear_cookies</string>
  <string name="key_clear_cache" translatable="false">clear_cache</string>
  <string
        name="key_clear_permissions"
        translatable="false"
    >clear_permissions</string>
  <string name="key_homepage_type" translatable="false">homepage_type</string>
  <string name="key_move_navbar" translatable="false">move_navbar</string>
  <string
        name="key_use_custom_collection"
        translatable="false"
    >use_custom_collection</string>
  <string
        name="key_collection_name"
        translatable="false"
    >collection_name</string>
  <string
        name="key_collection_user"
        translatable="false"
    >collection_user</string>
  <string name="key_auto_font_size" translatable="false">auto_font_size</string>
  <string
        name="key_font_size_factor"
        translatable="false"
    >font_size_factor</string>
  <string name="key_hide_url_bar" translatable="false">hide_url_bar</string>
  <string
        name="key_show_contextual_toolbar"
        translatable="false"
    >show_contextual_toolbar</string>
  <string
        name="key_show_tab_group_bar"
        translatable="false"
    >show_tab_group_bar</string>
    <string name="key_swap_drawers" translatable="false">swap_drawers</string>
  <string
        name="key_stack_from_bottom"
        translatable="false"
    >stack_from_bottom</string>
  <string
        name="key_show_tabs_in_grid"
        translatable="false"
    >show_tabs_in_grid</string>
  <string name="key_sideload_xpi" translatable="false">sideload_xpi</string>
  <string name="key_swipe_refresh" translatable="false">swipe_refresh</string>
  <string
        name="key_remote_debugging"
        translatable="false"
    >remote_debugging</string>
  <string
        name="key_export_bookmarks"
        translatable="false"
    >export_bookmarks</string>
  <string
        name="key_import_bookmarks"
        translatable="false"
    >import_bookmarks</string>
  <string
        name="key_export_settings"
        translatable="false"
    >export_settings</string>
  <string
        name="key_import_settings"
        translatable="false"
    >import_settings</string>
  <string name="key_clear_settings" translatable="false">clear_settings</string>
  <string
        name="key_prompt_external_downloader"
        translatable="false"
    >prompt_external_downloader</string>
  <string
        name="key_show_protocol"
        translatable="false"
    >show_url_protocol</string>
   <string
        name="key_search_suggestions_enabled"
        translatable="false"
    >search_suggestions_enabled</string>
  <string
        name="key_search_suggestion_count"
        translatable="false"
    >search_suggestion_count</string>
  <string name="key_safe_browsing" translatable="false">safe_browsing</string>
  <string name="key_https_only" translatable="false">https_only_mode</string>
  <string name="key_doh" translatable="false">doh_mode</string>
  <string name="key_doh_provider" translatable="false">doh_provider_url</string>
  <string name="key_global_privacy_control" translatable="false">global_privacy_control</string>
  <string name="key_sleeping_tabs" translatable="false">sleeping_tabs_mode</string>
  <string
        name="key_shortcuts_visible"
        translatable="false"
    >shortcuts_visible</string>
    <string
        name="key_tracking_protection"
        translatable="false"
    >tracking_protection</string>
  <string
        name="key_trust_third_party_certs"
        translatable="false"
    >trust_third_party_certs</string>
  <string
        name="key_homepage_background_image"
        translatable="false"
    >homepage_background_image</string>
  <string
        name="key_load_shortcut_icons"
        translatable="false"
    >load_shortcut_icons</string>
  <string
        name="key_clear_bookmarks"
        translatable="false"
    >clear_bookmarks</string>
  <string name="more">More Info</string>
  <string name="version">Application version</string>
  <string name="licenses">Open Source Licenses</string>
  <string
        name="mpl_license"
        translatable="false"
    >Mozilla Public License 2.0</string>
  <string name="apache" translatable="false">Apache License 2.0</string>
    <string
        name="mozac"
        translatable="false"
    >Mozilla Android Components</string>
  <string
        name="android_open_source_project"
        translatable="false"
    >Android Open Source Project</string>
  <string name="geckoview" translatable="false">GeckoView</string>
    <string name="custom">Custom</string>
  <string name="tabs">Tabs</string>
    <string name="no_tabs_message">No tabs open</string>
  <string name="no_tabs_description">Tap the + button to open a new tab</string>
  <string name="close">Close</string>
  <string name="tab_grid">Show tabs in grid</string>
  <string name="action_print">Print</string>
  <string name="action_add_to_homescreen">Add to home screen</string>
  <string name="action_history">History</string>
  <string name="no_history">No browsing history yet</string>
  <string name="action_bookmarks">Bookmarks</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="send_tab_to_device">Send Tab to Device</string>
    <string name="forward">Forward</string>
  <string name="reload">Reload</string>
  <string name="settings">Settings</string>
  <string name="new_tab">New tab</string>
    <string name="close_tab">Close tab</string>
  <string name="desktop_mode">Desktop site</string>
  <string name="desktop_mode_default">Request desktop site by default</string>
  <string name="desktop_mode_default_summary">New tabs open in desktop mode. Tablets and large windows use this unless you turn it off.</string>
  <string name="translations_enabled">Page translations</string>
  <string name="translations_enabled_summary">Offer to translate pages in another language</string>
  <string name="translate_page">Translate page</string>
  <string name="show_original_page">Show original</string>
    <string name="stop">Stop</string>
  <string name="install">Install</string>
  <string name="cancel">Cancel</string>
  <string name="export_bookmarks">Export bookmarks to backup</string>
  <string name="import_backup">Import bookmarks from backup</string>
  <string name="clear_bookmarks">Clear bookmarks</string>
  <string
        name="clear_bookmarks_confirm"
    >Are you sure you want to clear all bookmarks?</string>
    <string name="settings_general">General settings</string>
  <string name="settings_general_explain">JavaScript…</string>
  <string
        name="settings_privacy_and_security"
    >Privacy and security settings</string>
  <string name="settings_privacy_and_security_explain">Clear history…</string>
  <string name="settings_import_and_export">Import and export settings</string>
  <string
        name="settings_import_and_export_explain"
    >Exporting and importing…</string>
  <string name="settings_customization">Customization settings</string>
  <string
        name="settings_customization_explain"
    >App theme, bottom navbar…</string>
  <string name="settings_advanced">Advanced settings</string>
  <string name="settings_advanced_explain">Add-on collection…</string>
  <string name="settings_addons">Add-on settings</string>
  <string
        name="settings_addons_explain"
    >Enable add-ons, remove add-ons…</string>
  <string name="settings_about">About</string>
  <string
        name="settings_about_explain"
    >App version, open source licenses…</string>
    <string name="javascript_enabled">Enable JavaScript</string>
  <string name="clear_tabs">Clear open tabs</string>
  <string name="clear_history">Clear browsing history and site data</string>
  <string name="clear_cookies">Clear cookies</string>
  <string name="clear_cache">Clear cache</string>
  <string name="clear_permissions">Clear permissions</string>
  <string name="search_engine">Search engine</string>
  <string name="private_search_engine">Private search engine</string>
  <string name="private_search_engine_summary">Used only in private tabs. Same as the default engine if unset.</string>
  <string name="homepage_type">Homepage type</string>
  <string name="use_custom_collection">Use custom add-on collection</string>
  <string name="collection_user">Collection user</string>
  <string name="collection_name">Collection name</string>
  <string name="backup_bookmarks">Backup bookmarks</string>
    <string name="load_xpi_link">Sideload XPI link</string>
  <string name="load_xpi_file">Upload XPI file</string>
  <string
        name="key_sideload_xpi_file"
        translatable="false"
    >sideload_xpi_file</string>
  <string name="remote_debugging">Remote debugging</string>
  <string name="export_settings">Export settings to backup</string>
  <string name="import_settings">Import settings from backup</string>
  <string name="clear_settings">Reset settings</string>
  <string name="backup_settings">Settings backup</string>
  <string
        name="prompt_external_downloader"
    >Ask which app to use to download files</string>
  <string name="search_suggestions">Search suggestions</string>
  <string name="search_suggestion_count">Number of search suggestions</string>
  <string name="safe_browsing">Safe browsing</string>
  <string name="tracking_protection">Tracking protection</string>
    <string
        name="trust_third_party_certs"
    >Trust third party CA certificates</string>
  <string name="share">Share</string>
  <string name="welcome_to_nira">Welcome to Nira Browser</string>
  <string
        name="welcome_subtitle"
    >A fast, private, and customizable browser designed for you</string>
  <string name="privacy">Privacy</string>
  <string name="privacy_first">Privacy First</string>
  <string name="ad_blocking">Ad Blocking</string>
  <string
        name="built_in_ad_blocking"
    >Built-in ad blocking and tracking protection</string>
  <string name="extensions">Extensions</string>
  <string name="extension_support">Full extension support</string>
  <string name="highly_customizable">Highly customizable interface</string>
  <string name="customization">Customization</string>
  <string name="web_apps_title">Web Apps</string>
    <string name="refresh">Refresh</string>
    <string name="mozac_feature_toolbar_back_button">Back</string>
    <string name="mozac_feature_toolbar_forward_button">Forward</string>
</resources>