<?xml version="1.0" encoding="utf-8"?>
<!-- Reorganized General Settings - Material 3 -->
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/search_engine">
        
        <Preference
            app:key="@string/key_search_engine"
            app:title="@string/search_engine"
            app:icon="@drawable/mozac_ic_search_24"
            app:singleLineTitle="false"/>

        <Preference
            app:key="@string/key_private_search_engine"
            app:title="@string/private_search_engine"
            app:summary="@string/private_search_engine_summary"
            app:icon="@drawable/mozac_ic_private_mode_24"
            app:singleLineTitle="false"/>

        <com.prirai.android.nira.settings.MaterialSwitchPreference
            app:key="@string/key_search_suggestions_enabled"
            app:title="@string/search_suggestions"
            app:singleLineTitle="false"
            app:defaultValue="true"/>

        <SeekBarPreference
            android:max="10"
            app:min="1"
            app:key="@string/key_search_suggestion_count"
            app:title="@string/search_suggestion_count"
            app:showSeekBarValue="true"
            app:singleLineTitle="false"
            app:defaultValue="5"
            app:dependency="@string/key_search_suggestions_enabled"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Privacy &amp; Security">
        
        <com.prirai.android.nira.settings.MaterialSwitchPreference
            app:key="@string/key_tracking_protection"
            app:title="@string/tracking_protection"
            app:icon="@drawable/mozac_ic_shield_24"
            app:singleLineTitle="false"
            app:defaultValue="true"/>

        <com.prirai.android.nira.settings.MaterialSwitchPreference
            app:key="@string/key_safe_browsing"
            app:title="@string/safe_browsing"
            app:icon="@drawable/mozac_ic_lock_24"
            app:singleLineTitle="false"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Browser">
        
        <Preference
            app:key="@string/key_homepage_type"
            app:title="@string/homepage_type"
            app:icon="@drawable/mozac_ic_home_24"
            app:singleLineTitle="false"/>

        <com.prirai.android.nira.settings.MaterialSwitchPreference
            app:key="@string/key_desktop_mode_default"
            app:title="@string/desktop_mode_default"
            app:summary="@string/desktop_mode_default_summary"
            app:icon="@drawable/mozac_ic_device_desktop_24"
            app:singleLineTitle="false"
            app:defaultValue="false"/>

        <com.prirai.android.nira.settings.MaterialSwitchPreference
            app:key="@string/key_translations_enabled"
            app:title="@string/translations_enabled"
            app:summary="@string/translations_enabled_summary"
            app:icon="@drawable/mozac_ic_translate_24"
            app:singleLineTitle="false"
            app:defaultValue="true"/>

        <com.prirai.android.nira.settings.MaterialSwitchPreference
            app:key="@string/key_javascript_enabled"
            app:title="@string/javascript_enabled"
            app:singleLineTitle="false"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Media">

        <com.prirai.android.nira.settings.MaterialSwitchPreference
            app:key="@string/key_background_playback_youtube"
            app:title="@string/background_playback_youtube"
            app:summary="@string/background_playback_youtube_summary"
            app:singleLineTitle="false"
            app:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>