<?xml version="1.0" encoding="utf-8"?>
<!-- Reorganized Import/Export Settings - Material 3 with Grouped Actions -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/backup_bookmarks">
        
        <Preference
            android:key="@string/key_import_bookmarks"
            android:icon="@drawable/ic_baseline_download_24"
            android:singleLineTitle="false"
            android:title="@string/import_backup"/>
            
        <Preference
            android:key="@string/key_export_bookmarks"
            android:icon="@drawable/ic_baseline_upload_24"
            android:singleLineTitle="false"
            android:title="@string/export_bookmarks"/>
            
        <Preference
            android:key="@string/key_clear_bookmarks"
            android:singleLineTitle="false"
            android:title="@string/clear_bookmarks"/>
            
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/backup_settings">
        
        <Preference
            android:key="@string/key_import_settings"
            android:icon="@drawable/ic_baseline_download_24"
            android:singleLineTitle="false"
            android:title="@string/import_settings"/>
            
        <Preference
            android:key="@string/key_export_settings"
            android:icon="@drawable/ic_baseline_upload_24"
            android:singleLineTitle="false"
            android:title="@string/export_settings"/>
            
        <Preference
            android:key="@string/key_clear_settings"
            android:singleLineTitle="false"
            android:title="@string/clear_settings"/>

    </PreferenceCategory>

</PreferenceScreen>