<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    android:background="@drawable/menu_toolbar_background">

    <ImageButton
        android:id="@+id/toolbar_back"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_ios_back"
        android:contentDescription="@string/mozac_feature_toolbar_back_button"
        android:scaleType="centerInside"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/toolbar_forward"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_ios_forward"
        android:contentDescription="@string/mozac_feature_toolbar_forward_button"
        android:scaleType="centerInside"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/toolbar_reload"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_refresh"
        android:contentDescription="@string/refresh"
        android:scaleType="centerInside"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/toolbar_share"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ios_share_24"
        android:contentDescription="@string/share"
        android:scaleType="centerInside"
        app:tint="?attr/colorOnSurface" />

</LinearLayout>
